<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="string_spotify">Spotify Streamer</string>
    <string name="string_footballscores">Scores App</string>
    <string name="string_library">Library App</string>
    <string name="string_builditbigger">Build It Bigger</string>
    <string name="string_xyzreader">XYZ Reader</string>
    <string name="string_capstone">Capstone</string>
    <string name="string_app_title">My Apps Portfolio</string>
    <string name="string_toast_spotify">This button will launch my Spotify Streamer App</string>
    <string name="string_toast_footballscores">This button will launch my Scores App</string>
    <string name="string_toast_library">This button will launch my Library App</string>
    <string name="string_toast_builditbigger">This button will launch my Build It Bigger App</string>
    <string name="string_toast_xyzreader">This button will launch my XYZ Reader App</string>
    <string name="string_toast_capstone">This button will launch my Capstone App</string>
</resources>
